# berdl-spark-monitor

./: .copier-answers-kbase.yml  .copier-answers.yml  .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  install.json  package.json  plan.md  pyproject.toml
.github/workflows/: build.yml
berdl_spark_monitor/: __init__.py  routes.py
jupyter-config/server-config/: berdl_spark_monitor.json
src/: SparkMonitorLuminoPanel.ts  constants.ts  index.ts  types.ts
src/api/: sparkApi.ts
src/components/: ActiveStages.tsx  ClusterControls.tsx  ClusterOverview.tsx  CollapsibleSection.tsx  ExecutorSection.tsx  ExecutorTable.tsx  QueryHistory.tsx  ResourceBar.tsx  SparkMonitorPanel.tsx  SpillWarning.tsx  StatusBarWidget.tsx  StatusDot.tsx  TabBadge.ts
src/contexts/: SparkVisibilityContext.ts
src/hooks/: useClusterActions.ts  useClusterStatus.ts  useClusterSummary.ts  useExecutors.ts  useStages.ts
src/mocks/: handlers.ts  mockData.ts  start.ts
src/utils/: format.ts
style/: base.css
